Migrate frontend to electron.js